# sequential-correlations-in-context-regression

./: README.md  pyproject.toml
specific_figures/FIGURE1_compare_query_and_effective_samples/: effective_compare.py
specific_figures/FIGURE1_compare_query_and_effective_samples/saved_data/: reduced_effective_compare.csv
specific_figures/FIGURE2_concentration_theory_plot/: run.ipynb  run_general_kernel.ipynb
specific_figures/FIGURE2_concentration_theory_plot/.ipynb_checkpoints/: run-checkpoint.ipynb  run_general_kernel-checkpoint.ipynb
specific_figures/FIGURE3_querygains/: plot_delta_query.py
theory_base/: reduced.py  theory.py
transformer_base/: architectures_seqcorr.py
